# chronodocs

./: .chronodocs.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  USAGE.md  pyproject.toml
.devcontext/demo/: .creation_index.json  .update_index.json  00-openai-prd.md  01-perplexity-prd.md  02-prd-from-code-prompt.md  03-prd-from-prd-from-code-prompt.md  04-original-prd.md  05-pre-commit-setup.md  change_log.md
chronodocs/: cli.py  config.py  creation_index.py  git_helpers.py  reconciler.py  reporter.py  update_index.py  watcher_phase.py  watcher_root.py
scripts/: simulate_llm_activity.py
tests/: test_cli.py  test_config.py  test_creation_index.py  test_git_helpers.py  test_reporter.py  test_update_index.py  test_watcher_phase.py  test_watcher_root.py
